--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "16.14.0",
     "react-redux": "7.2.9",
     "react-router-dom": "5.3.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-thunk": "2.4.1",
     "sass": "1.49.9",
     "swiper": "8.0.7",
