--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "7.2.1",
     "axios": "^1.1.3",
     "classnames": "2.3.1",
+    "rc-dropdown": "^4.0.1",
+    "rc-menu": "^9.8.1",
     "react": "16.14.0",
     "react-admin": "3.19.11",
     "react-click-away-listener": "^2.0.5",
