--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "7.2.9",
     "react-router-dom": "5.3.3",
     "react-scripts": "^5.0.1",
+    "redux-form": "^8.3.9",
     "redux-thunk": "2.4.1",
     "sass": "1.49.9",
     "swiper": "8.0.7",
