reselect + фильтрация по кнопкам в селекторе

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "redux-form": "^8.3.9",
     "redux-thunk": "2.4.1",
+    "reselect": "^4.1.7",
     "sass": "1.49.9",
     "swiper": "8.0.7",
     "web-vitals": "2.1.4"
